Added callback in Slider

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Libs/CloudUI-1.0/.gitignore
 Libs/CloudUI-1.0/README.md
 Libs/CloudUI-1.0/notes.txt
 Libs/CloudUI-1.0/CloudUI-1.0.toc
+Libs/CloudUI-1.0/.lua-format
