--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Libs/CloudUI"]
-	path = Libs/CloudUI
+[submodule "Libs/CloudUI-1.0"]
+	path = Libs/CloudUI-1.0
 	url = https://github.com/cloudbells/CloudUI
